--- a/Kasper's_Little_Journey/Kasper's_Little_Journey/Kasper's_Little_Journey.csproj
+++ b/Kasper's_Little_Journey/Kasper's_Little_Journey/Kasper's_Little_Journey.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Background.cs" />
     <Compile Include="Bullet.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="Explosion.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Homework.cs" />
     <Compile Include="HUD.cs" />
